Use explicit classpath for Oracle Cloud (#75)